# datason

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ESSENTIAL_FILES_FOR_PERFORMANCE_SYSTEM.md  LARGE_DATA_OPTIMIZATION_GUIDE.md  LEARNINGS_AND_STRATEGY.md  LICENSE  ML_INTEGRATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_PRD.md  PERFORMANCE_OPTIMIZATION_RESULTS.md  PHASE_1_OPTIMIZATION_SUMMARY.md  PHASE_2_OPTIMIZATION_PLAN.md  PROFILING.md  PR_DESCRIPTION.md  PR_DESCRIPTION_DOCS_FIX.md  PYTHON_3_13_OPTIMIZATION_ANALYSIS.md  README.md  ROADMAP_ANALYSIS_AND_LEGACY_CLEANUP.md  SECURITY.md  SOLUTION_SUMMARY.md  STEP_1_5_SUCCESS_ANALYSIS.md  benchmark_real_performance.py  codecov.yml  coverage_baseline.txt  deserialization_audit.py  final_test.py  justfile  llms-full.txt  llms.txt  mkdocs.yml  performance_metrics.json  pyproject.toml  pyrightconfig.json  renovate.json
.claude/commands/: add-plugin.md  bench.md  lint.md  migrate-plugin.md  quality-check.md  review-pr.md  scaffold-v2.md  test.md
.claude/hooks/: PostToolUse.sh
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/codeql/: codeql-config.yml
.github/workflows/: auto-merge.yml  bump-major.yml  bump-minor.yml  bump-patch.yml  ci-full-matrix.yml.backup  ci-v2-template.yml  ci.yml  codeql.yml  comprehensive-performance.yml  docs.yml  mutation.yml  performance.yml  publish.yml  (+7 more)
backup_removed_tests/: test_converters_boost.py  test_core.py  test_core_coverage_boost.py  test_core_deserialization_paths.py  test_core_error_paths.py  test_deserializer_enhancements.py  test_deserializer_hot_path.py  test_deserializers.py  test_deserializers_coverage_boost.py  test_exception_flows_batch2.py  test_exception_flows_batch3.py  test_simple_coverage_boost.py  test_template_and_optimization_paths.py  test_ultra_coverage_boost.py
benchmarks/: README.md  benchmark_real_performance.py  cache_scope_benchmark.py  ci_performance_tracker.py  comprehensive_performance_20250602_222824.json  comprehensive_performance_20250602_223019.json  comprehensive_performance_20250602_223654.json  comprehensive_performance_20250602_223726.json  comprehensive_performance_20250602_223833.json  comprehensive_performance_20250602_224237.json  comprehensive_performance_20250602_224345.json  comprehensive_performance_20250602_224608.json  comprehensive_performance_20250602_224743.json  comprehensive_performance_suite.py  deserialization_benchmarks.py  enhanced_benchmark_suite.py  pickle_bridge_benchmark.py  realistic_performance_investigation.py  requirements-benchmarking.txt  run_performance_analysis.py  simple_realistic_benchmarks.py
datason/: __init__.py  _cache.py  _config.py  _core.py  _deserialize.py  _errors.py  _profiling.py  _protocols.py  _registry.py  _rustcore.py  _types.py  api.py  cache_manager.py  config.py  converters.py  core.py  core_new.py  data_utils.py  datetime_utils.py  deserializers.py  deserializers_new.py  file_io.py  integrity.py  large_data_processor.py  ml_serializers.py  ml_type_handlers.py  optimizations.py  pickle_bridge.py  redaction.py  serializers.py  type_handlers.py  type_registry.py  utils.py  validation.py
docs/: AI_USAGE_GUIDE.md  BENCHMARKING.md  BUILD_PUBLISH.md  CHANGELOG.md  CI_PIPELINE_GUIDE.md  CONTRIBUTING.md  DEPENDABOT_GUIDE.md  EXTERNAL_BENCHMARK_SETUP.md  FEATURE_MATRIX.md  GITHUB_PAGES_SETUP.md  PLUGIN_TESTING.md  RELEASE_MANAGEMENT.md  ROADMAP.md  ROADMAP_UPDATED.md  SECURITY.md  SETUP_GUIDE.md  TOOLING_GUIDE.md  ai-agents.md  api.md  changelog.md  configuration.md  core-serialization-strategy.md  getting-started.md  index.md  integrity.md  migration.md  performance-strategy.md  plugins.md  rust-feasibility.md  security.md  supported-types.md  two-modes.md
examples/: README.md  advanced_ml_examples.py  advanced_serialization_demo.py  ai_ml_examples.py  auto_detection_and_metadata_demo.py  basic_usage.py  bidirectional_example.py  chunked_and_template_demo.py  django_integration_guide.py  domain_config_demo.py  enhanced_utils_example.py  fastapi_integration_guide.py  file_operations_guide.py  integrity_verification_demo.py  large_data_processing_example.py  modern_api_demo.py  pickle_bridge_demo.py  profiling_demo.py  python_313_optimization_demo.py  rust_vs_python_benchmark.py  security.py  security_patterns_demo.py  seldon_kserve_integration.py  streaming_example.py  type_plugins.py  uuid_api_compatibility_demo.py  uuid_pydantic_quickstart.py
investigation/: benchmark_performance.py  findings_report.md  test_concurrency.py  test_edge_cases.py  test_ergonomics.py  test_json_compatibility.py  test_malicious_plugin.py  test_scaling.py  test_security.py  test_untrusted_payload.py  testing_plan.md  usability_report.md
perf/: budgets.json
rust/: Cargo.toml
scripts/: build_rust.sh  check_coverage.py  check_function_length.py  check_json_imports.py  check_module_size.py  debug_benchmark_token.py  generate_performance_chart.py  setup_github_labels.py  simple_json_check.py  sync_docs.py  test_python_compatibility.py
serialpy/: __init__.py  core.py  datetime_utils.py  deserializers.py  ml_serializers.py
tests/: README.md  __init__.py  conftest.py  test_auto_detection_and_metadata.py  test_benchmarks.py  test_chunked_streaming.py  test_circular_references.py  test_config_and_type_handlers.py  test_configurable_caching.py  test_converters.py  test_core.py  test_core_coverage_boost.py  test_coverage_boost.py  test_dataframe_orientation_regression.py  test_datetime_coverage_boost.py  test_deserializer_hot_path.py  test_deserializers.py  test_edge_cases.py  test_focused_coverage_boost.py  test_init_coverage_boost.py  test_json_compat.py  test_ml_serializers.py  test_ml_serializers_coverage_boost.py  test_new_ml_frameworks.py  test_optional_dependencies.py  test_performance.py  test_pickle_bridge.py  test_python_version_compatibility.py  test_security.py  test_targeted_coverage_boost.py  test_template_deserialization.py  test_unified_ml_handlers.py
tools/: __init__.py  gen_supported_types.py  mkdocs_hooks.py
(+219 files in other folders)
