[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datason"
version = "2.0.0a1"
description = "Zero-dependency Python serialization with intelligent type handling — drop-in json replacement."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["serialization", "json", "pandas", "datetime", "numpy", "ml", "ai", "data-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[[project.authors]]
name = "datason Contributors"

[[project.maintainers]]
name = "datason Maintainers"
email = "maintainers@datason.dev"

[project.optional-dependencies]
numpy = ["numpy>=1.21.0"]
pandas = ["pandas>=1.3.0"]
ml = [
    "torch>=1.12.0",
    "tensorflow>=2.10.0",
    "scikit-learn>=1.1.0",
    "scipy>=1.9.0",
]
ml-extra = [
    "Pillow>=9.0.0",
    "catboost>=1.2.0",
    "optuna>=3.0.0",
    "plotly>=5.0.0",
    "polars>=0.20.0",
    "jax[cpu]>=0.4.0",
    "transformers>=4.20.0",
]
crypto = ["cryptography>=42.0.0"]
all = [
    "datason[numpy]",
    "datason[pandas]",
    "datason[ml]",
    "datason[crypto]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.82.0",
    "syrupy>=4.0.0",
    "pyright>=1.1.350",
    "ruff>=0.9.0",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
    "twine>=4.0.2",
    "build>=1.0.3",
    "pre-commit>=3.5.0",
    "pip-audit>=2.6.1",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/danielendler/datason"
Documentation = "https://datason.readthedocs.io"
Repository = "https://github.com/danielendler/datason"
"Bug Tracker" = "https://github.com/danielendler/datason/issues"
Discussions = "https://github.com/danielendler/datason/discussions"

# ==============================================================================
# Ruff (linter + formatter)
# ==============================================================================
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "S"]
ignore = ["E501", "B008", "C901", "SIM105", "SIM117", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "E402"]

# ==============================================================================
# Pytest
# ==============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-m", "not benchmark",
]
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "benchmark: marks tests as benchmarks",
    "integration: marks tests as integration tests",
    "core: marks core functionality tests",
    "numpy: marks tests requiring numpy",
    "pandas: marks tests requiring pandas",
    "ml: marks tests requiring ML libraries",
    "optional: marks tests for optional dependency functionality",
]
filterwarnings = [
    "error",
    "default::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ==============================================================================
# Coverage
# ==============================================================================
[tool.coverage.run]
source = ["datason"]
omit = ["*/tests/*", "*/test_*.py", "scripts/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "TYPE_CHECKING",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# ==============================================================================
# Hatch build
# ==============================================================================
[tool.hatch.build.targets.wheel]
packages = ["datason"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.git", "/.github", "/.mypy_cache", "/.pytest_cache",
    "/.ruff_cache", "/venv", "/htmlcov", "/.coverage",
    "/coverage.xml", "/dist", "/build", "*.egg-info",
    "__pycache__", "/tests", "/.pre-commit-config.yaml",
]
